--- a/app/src/app.json
+++ b/app/src/app.json
@@ -2,7 +2,7 @@
   "pages": [
     "pages/index/main",
     "pages/logs/main",
-    "pages/counter/main"
+    "pages/newsList/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -11,34 +11,21 @@
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
-    "color": "#999",
     "backgroundColor": "#fafafa",
-    "selectedColor": "#333",
     "borderStyle": "white",
-
     "list": [{
-      "text": "首页",
-      "pagePath": "pages/index/main",
-      "iconPath": "static/tabs/home.png",
-      "selectedIconPath": "static/tabs/home-active.png"
+      "text": "列表",
+      "pagePath": "pages/newsList/main",
+      "iconPath": "static/tabs/list-icon.png",
+      "selectedIconPath": "static/tabs/list-icon-current.png"
     }, {
-      "text": "订单",
+      "text": "个人",
       "pagePath": "pages/logs/main",
-      "iconPath": "static/tabs/orders.png",
-      "selectedIconPath": "static/tabs/orders-active.png"
-    }],
-
-    "items": [{
-      "name": "首页",
-      "pagePath": "pages/index/main",
-      "icon": "static/tabs/home.png",
-      "activeIcon": "static/tabs/home-active.png"
-    }, {
-      "name": "订单",
-      "pagePath": "pages/logs/main",
-      "icon": "static/tabs/orders.png",
-      "activeIcon": "static/tabs/orders-active.png"
-    }],
+      "iconPath": "static/tabs/user-icon.png",
+      "selectedIconPath": "static/tabs/user-icon-current.png"
+    }],    
+    "color": "#999999",
+    "selectedColor": "#e81f1f",
     "position": "bottom"
   }
 }
